--- a/src/components/rightPage/FloatingBar.css
+++ b/src/components/rightPage/FloatingBar.css
@@ -1,11 +1,62 @@
-#floating-bar {
-    width: 210px;
+/* #floating-bar {
+    width: 220px;
     height: 200px;
     position: fixed;
     right: 2px;
     top: 100px;
     float: right;
-    background: #eea;
-    z-index: 100;
+    background: #fff;
+    border: 3px;
     overflow-y: scroll;
 }
+
+table,th,td {
+    width: 75%;
+    border: 1px solid #005277 ;
+    border-collapse: collapse;
+}
+
+th {
+    text-align: middle;
+    top:0;
+    background: #00bcd4;
+    color: #fff;
+}
+ */
+
+#floating-bar {
+    top: 50px;
+    right: 2px;
+    position: relative;
+    z-index: 100;
+}
+
+ table
+        {
+            border: 3px;
+            float: right;
+            height: 200px;
+            overflow-y: scroll;
+            border-collapse: collapse;
+            margin: 0 auto;
+            text-align: center;
+        }
+        table td, table th
+        {
+            border: 1px solid #cad9ea;
+            color: #666;
+            height: 30px;
+        }
+        table thead th
+        {
+            background-color: #CCE8EB;
+            width: 100px;
+        }
+        table tr:nth-child(odd)
+        {
+            background: #fff;
+        }
+        table tr:nth-child(even)
+        {
+            background: #F5FAFA;
+        }
